--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "add": "^2.0.6",
     "button": "^1.1.1",
@@ -37,6 +38,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-motion": "^0.5.2",
+    "react-nice-scroll": "^1.0.0",
     "react-toastify": "^11.0.3",
     "select": "^1.1.2",
     "shadcn": "^2.3.0",
