--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@reduxjs/toolkit": "^2.5.1",
     "add": "^2.0.6",
     "button": "^1.1.1",
     "class-variance-authority": "^0.7.1",
@@ -40,10 +41,12 @@
     "react-icons": "^5.4.0",
     "react-motion": "^0.5.2",
     "react-nice-scroll": "^1.0.0",
+    "react-redux": "^9.2.0",
     "react-toastify": "^11.0.3",
     "select": "^1.1.2",
     "shadcn": "^2.3.0",
     "shadcn-ui": "^0.9.4",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
